# Quoridor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  guidelines.md  makefile  setup-mongocxx
.github/workflows/: cmake.yml
UML_Diagrams/: ChatDiagrams.pu  GameDiagrams.pu  ServerDiagram.pu  UseCaseDiagram.pu  UseCaseGame.pu  UseCaseMenu.pu  UserSideDiagrams.pu
UML_Diagrams/activity/: game_flow.uml  log_process.uml  turn_flow.uml
UML_Diagrams/sequence/: log_process.uml  register_process.uml
cmake/: AddCatch2.cmake  AddFTXUI.cmake  AddQt.cmake  AddSockpp.cmake  Addcryptopp.cmake  Addjson.cmake  Addmongoc.cmake  Addmongocxx.cmake  CPM.cmake  README.md
configs/: client_config.txt  server_config.txt
doc/: chap3_sf.tex  main.tex  readme.md  section1.tex  section_3.tex  srd_ej_lv.tex
doc/Chapitre_6_FrN/: ChatSequence.eps  Login.eps  Reg.eps  UserSideDiagrams.eps  eloCalculation.tex  log_process.pu  reg.pu  sous_section_6_1.tex  sous_section_6_2.tex
doc/img/: 2_UseCaseGame.eps  2_UseCaseMenu.eps  4_LogActivity.eps  4_TurnActivity.eps  6_ChatSequence.eps  6_GameDiagrams.eps  6_GameFlow.eps  6_Login.eps  6_Reg.eps  6_ServerSideDiagram.eps  6_UserSideDiagrams.eps  UseCaseGame.eps  UseCaseMenu.eps
doc/tex/: 1_historique.tex  1_intro.tex  2_usr_func_ns_ak.tex  3_sys_nfunc_st_ei.tex  4_sys_func_bp.tex  5_sys_nfunc_ej_lv.tex  6_1_design_fn.tex  6_1_serversidediagram_ej.tex  (+3 more)
doxygen/: Doxyfile  README.md  doxygen-awesome-fancy-scrollbars.css  doxygen-awesome.css  main.sh
hooks/: pre-commit
include/: CMakeLists.txt
src/: Board.cpp  Board.h  BoardPrinter.h  CMakeCache.txt  CMakeLists.txt  Cell.cpp  Cell.h  ChatBox.h  Database.cpp  Database.h  DbTest.cpp  Event.h  Leaderboard.h  LoginHandler.h  Message.h  PasswordEncrypter.cpp  PasswordEncrypter.h  Player.cpp  Player.h  PlayerAction.cpp  PlayerAction.h  PlayerBoard.h  Point.cpp  Point.h  RegisterHandler.h  RestartGame.cpp  RestartGame.h  Score.cpp  Score.h  Stringable.cpp  Stringable.h  User.h  Wall.h  WallAction.h  WallBoard.cpp  WallBoard.h  cmake_install.cmake  main.cpp
src/client/: Action.cpp  Action.h  Board.cpp  Board.h  BoardComponent.cpp  BoardComponent.h  BoardPrinter.cpp  BoardPrinter.h  CMakeLists.txt  Cell.cpp  Cell.h  Controller.cpp  Controller.h  Corridor.cpp  Corridor.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  MainController.cpp  MainController.h  MainModel.cpp  MainModel.h  Player.cpp  Player.h  PlayerAction.cpp  PlayerAction.h  PlayerBoad.cpp  PlayerBoard.h  PlayerEnum.h  Point.cpp  Point.h  QtVue.cpp  QtVue.h  QtVue.ui  Score.cpp  Score.h  ServerBridge.cpp  ServerBridge.h  ServerController.cpp  (+17 more)
src/client/terminal_ui_proto/src/: main.cpp
src/common/: AuthSerializableMessageFactory.cpp  AuthSerializableMessageFactory.h  BoardActionsSerializableMessageFactory.cpp  BoardActionsSerializableMessageFactory.h  CMakeLists.txt  ChatBoxSerializableMessageFactory.cpp  ChatBoxSerializableMessageFactory.h  Event.h  Exceptions.h  FriendActionsSerializableMessageFactory.cpp  FriendActionsSerializableMessageFactory.h  GameConfiguration.cpp  GameConfiguration.h  GameRelatedActionsSerializableMessageFactory.cpp  GameRelatedActionsSerializableMessageFactory.h  GameSetupSerializableMessageFactory.cpp  GameSetupSerializableMessageFactory.h  Message.h  ObjectExchangesSerializableMessageFactory.cpp  ObjectExchangesSerializableMessageFactory.h  Observer.cpp  Observer.h  Point.cpp  Point.h  QuoridorEvent.h  RequestHandler.cpp  RequestHandler.h  RestartGame.cpp  RestartGame.h  Serializable.cpp  Serializable.h  SerializableMessageFactory.cpp  SerializableMessageFactory.h  SocketUser.cpp  SocketUser.h  Stringable.cpp  Stringable.h  User.h  aiPlayer.cpp  aiPlayer.h  (+1 more)
src/common/MessageEnums/: DataTypes.h  Domain.h  Status.h
src/common/MessageEnums/Actions/: AuthActions.h  ChatBoxActions.h  FriendActions.h  GameActions.h  ObjectExchanges.h  PlayerActions.h
src/common/MessageEnums/Modes/: GameModes.h
src/resources/: Board.h  BoardPrinter.cpp  BoardPrinter.h  Cell.h  Chat.h  ChatBox.h  LeaderBoard.h  Leaderboard.h  Player.h  PlayerAction.h  PlayerBoad.cpp  PlayerEnum.h  RegisterHandler.h  RestartGame.h  User.h  Wall.cpp  Wall.h  WallAction.cpp  WallAction.h  chatbox.h  date.h  leaderboard.h  loginhandler.h  message.h  passwordencrypter.h  registerhandler.h  user.h
src/server/: AuthHandler.cpp  AuthHandler.h  AuthSerializableMessageFactory.cpp  AuthSerializableMessageFactory.h  BoardActionsSerializableMessageFactory.cpp  BoardActionsSerializableMessageFactory.h  CMakeLists.txt  ChatBox.cpp  ChatBox.h  ChatBoxSerializableMessageFactory.cpp  ChatBoxSerializableMessageFactory.h  ClientHandler.cpp  ClientHandler.h  Config.cpp  Config.h  ConfigEnums.h  Database.cpp  Database.h  EloCalculator.cpp  EloCalculator.h  FriendActionsSerializableMessageFactory.cpp  FriendActionsSerializableMessageFactory.h  GameActionsSerializableMessageFactory.cpp  GameActionsSerializableMessageFactory.h  GameHandler.cpp  GameHandler.h  GameQueue.cpp  GameQueue.h  GameRelatedActionsSerializableMessageFactory.cpp  GameRelatedActionsSerializableMessageFactory.h  LandingPool.cpp  LandingPool.h  Leaderboard.h  LoginHandler.cpp  LoginHandler.h  ObjectExchangesSerializableMessageFactory.cpp  ObjectExchangesSerializableMessageFactory.h  PasswordEncrypter.cpp  PasswordEncrypter.h  RegisterHandler.h  (+16 more)
src/server/MessageEnums/: DataTypes.h  Domain.h  Status.h
src/server/MessageEnums/Actions/: AuthActions.h  ChatBoxActions.h  FriendActions.h  GameActions.h  ObjectExchanges.h  PlayerActions.h
src/server/MessageEnums/Modes/: GameModes.h
tests/: CMakeLists.txt  Test_PasswordEncrypter.cpp  catch_main.cpp  main.cpp
tests/client/: CMakeLists.txt  Test_Main_Model_Controller.cpp  Test_Player_Moves.cpp  Test_Point.cpp  Test_Timer.cpp  Test_Wall_Placement.cpp
tests/common/: CMakeLists.txt  Test_Player_Moves.cpp  Test_Point.cpp  Test_SocketUser.cpp  Test_Wall_Placement.cpp
tests/server/: CMakeLists.txt  Test_DatabaseHandler.cpp  Test_LandingPool.cpp  Test_PasswordEncrypter.cpp  Test_Requests_Exchange.cpp
(+2 files in other folders)
